removed panel flex as it was not displaying correctly on safari when hosted on heroku

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,7 +81,7 @@ img#header-logo {
     padding-top: 10%;
     padding-bottom: 5%;
     width: 80%;
-    margin-left: 5%;
+    margin-left: 0%;
 }
 
 #address, #date-time{
