--- a/app/assets/stylesheets/home-speakers.css
+++ b/app/assets/stylesheets/home-speakers.css
@@ -11,7 +11,6 @@
 
 .profile-summary{
   font-size: 1em;
-  font-family: AnonymousPro;
 }
 
 
